@@ -1,5 +1,10 @@
 # $Id$
 
+2007-03-20	Dmitry E. Demidov
+
+	* main/Flow/MethodMappedController.class.php: added  method
+	dropMethodMapping.
+
 2007-03-20	Konstantin V. Arkhipov
 
 	* main/DAOs/Workers/: removed all childs of Voodoo-worker, so now
